--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "devDependencies": {
-    "@types/amqplib": "^0.10.7",
-    "@types/node": "^22.13.10",
-    "@typescript-eslint/eslint-plugin": "^8.23.0",
-    "@typescript-eslint/parser": "^8.23.0",
-    "concurrently": "^9.1.2",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.6.0"
-  },
   "dependencies": {
     "amqplib": "^0.10.5",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "mercadopago": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/amqplib": "^0.10.7",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.13.10", 
+    "concurrently": "^9.1.2", 
+    "nodemon": "^3.1.10",
+    "typescript": "^5.8.3"
   }
 }
+
+ 
